--- a/divnik/templates/baseline.html
+++ b/divnik/templates/baseline.html
@@ -3,11 +3,44 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='generic.css') }}" />
+    <script type="importmap">
+        {
+            "imports": {
+                "commons": {{ url_for('static', filename='commons.js')|tojson }}
+            } 
+        }
+    </script>
+    <script type="module">
+        import { base } from "commons";
+        const logOutButton = document.getElementById("logout");
+        if (logOutButton !== null) {
+            logOutButton.addEventListener("click", logout);
+        }
+        async function logout(ev) {
+            await fetch(`${base}/auth/logout`, {
+                method: "POST"
+            })
+            window.location.assign(base)
+        }
+    </script>
     {% block head %}{% endblock %}
     <title>{% block title %}{% endblock %} - Дивник</title>
 </head>
 <body>
-    {% block content %}{% endblock %}
+    <div id="content-container">
+        <span id="header">
+            {% set user = get_current_user() %}
+            {% if user %}
+            <button id="logout" type="button">Выйти</button>
+            <span id="user">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"/></svg>
+                <span>{{ get_current_user().login }}</span>
+            </span>
+            {% else %}
+            {}
+            {% endif %}
+        </span>
+        {% block content %}{% endblock %}
+    </div>
 </body>
 </html>
