--- a/divnik/templates/import.html
+++ b/divnik/templates/import.html
@@ -1,17 +1,15 @@
 {% extends "baseline.html" %}
 {% block head %}
-<link rel="stylesheet" href="{{ url_for('static', filename='import.css') }}" />
+<link rel="stylesheet" href="{{ url_for('static', filename='forms.css') }}"/>
 <script type="module" src="{{ url_for('static', filename='import.js') }}"></script>
 {% endblock %}
 {% block title %}Импорт{% endblock %}
 {% block content %}
-<form id="fileimport">
-    <div class="field">
-        <label for="file">Файл</label>
-        <input id="file" type="file" name="file" required accept=".csv,text/csv" />
+<form id="fileimport" action="" method="">
+    <div>
+        <label for="file">Выберите файл: </label>
+        <input name="file" id="file" accept="text/csv,.csv" required type="file">
     </div>
-    <div class="button">
-        <button type="submit">Импортировать</button>
-    </div>
+    <button type="submit">Импортировать</button>
 </form>
 {% endblock %}
