--- a/divnik/static/generic.css
+++ b/divnik/static/generic.css
@@ -2,3 +2,33 @@
     font-family: sans-serif;
     font-size: 1rem;
 }
+.container {
+    display: flex;
+}
+#content-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#header {
+    background: whitesmoke;
+    padding: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    width: 25em;
+}
+#header>button {
+    background: white;
+    border-radius: 12px;
+}
+#user {
+    border-radius: 12px;
+    background: white;
+    padding: 5px;
+    margin-left: 10px;
+}
+#user>svg {
+    height: 20px;
+    width: 20px;
+}
